<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_new_game_propertis_lines">


    <EditText
        android:id="@+id/editTextGameRemarks"
        android:layout_width="347dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/CreateNewGame_lable_create_Game_Proprtis_Remarks"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlaceGame"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="219dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/CreateNewGame_lable_create_Game_Proprtis_Craet_Game_Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextGameDescription"
        android:layout_width="213dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:allowUndo="true"
        android:ems="10"
        android:hint="@string/CreateNewGame_lable_create_Game_Proprtis_Game_Descriptoin"
        android:maxLength="50"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGamesubject"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPlaceGame"
        android:layout_width="259dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CreateNewGame_lable_create_Game_Proprtis_Place_Of_Game"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameDescription"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextGamesubject"
        android:layout_width="216dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/CreateNewGame_lable_create_Game_Proprtis_Game_Subject"
        android:inputType="textPersonName"
        android:textColor="@color/black"

        android:textColorHint="@color/black"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerGameKind"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:text="@string/CreateNewGame_lable_create_Game_Proprtis_Game_Kind"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="207dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/create_radio_butten_skin1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="378dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="216dp"
        app:adSize="LARGE_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/imageViewGameKind"
        android:layout_width="115dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGameKind"
        app:srcCompat="@drawable/femely"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:onClick="buttonChangPointOnMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameDescription"
        app:srcCompat="@drawable/map_show" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="361dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:onClick="buttonAddNewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameRemarks"
        app:srcCompat="@drawable/save" />

</androidx.constraintlayout.widget.ConstraintLayout>