<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".show_exist_games_and_mishens_to_play_on_map_main_screen"
        tools:layout="@layout/map_marker_game_info_window"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="205dp" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:background="@color/black"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="304dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="169dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="13dp"
            android:onClick="CheckBox"
            android:background="@drawable/text_veiw_border_bleck_for_bacround"
            android:buttonTint="@color/white"

            android:text="@string/Maps_select_update_point_for_Mishen_Main_Instraction_Dont_SHow_GPS"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextclue"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="57dp"
            android:background="@drawable/text_veiw_border_bleck_for_bacround"
            android:hint="@string/Maps_select_update_point_for_Mishen_Main_Instraction_clue_to_GO_TO_mishen"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextInstraction"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="108dp"
            android:background="@drawable/text_veiw_border_bleck_for_bacround"
            android:hint="@string/Maps_select_update_point_for_Mishen_Main_Instraction_How_To_Go_To_mishen"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/buttonGetGPSLongLat"
            android:onClick="buttonGetGPSLongLat"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="153dp"
            map:srcCompat="@drawable/save" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="306dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="170dp"
            android:text="@string/Maps_select_update_point_for_Mishen_Main_Instraction_Info_Title"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonConvertToListView"
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:onClick="buttonConvertToListView"
        android:text=" list view"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.116"
        map:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>