<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/maintextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewMishen_Secend_SCrean_New_Mishen_Main_lable"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="20dp"
            />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:id="@+id/kind1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="66dp"
                        android:layout_marginTop="18dp"
                        android:id="@+id/ImageView1"
                        android:src="@drawable/q_4_anser_camera" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CreateNewMishen_Spesific_q_SCrean_New_Mishen_Q_4_Anser_Picher"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:id="@+id/butten1"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:id="@+id/kind2"
                android:layout_margin="10dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="71dp"
                        android:id="@+id/ImageView2"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/q_yes_no_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/CreateNewMishen_Spesific_q_SCrean_New_Mishen_Q_YesNo_picher"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:id="@+id/butten2"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:id="@+id/kind3"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:id="@+id/ImageView3"
                        android:src="@drawable/q_4_anser" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CreateNewMishen_Spesific_q_SCrean_New_Mishen_Q_4_Anser"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:id="@+id/butten3"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:id="@+id/kind4"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:layout_marginTop="18dp"
                        android:id="@+id/ImageView4"
                        android:src="@drawable/q_yesno" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CreateNewMishen_Spesific_q_SCrean_New_Mishen_Q_YesNo"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:id="@+id/butten4"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </GridLayout>
    </LinearLayout>>
</ScrollView>